fix code review issues. HTML spacing and misssing /ul tag, add info to README.md, fix ol, ul css styling in styles.css

--- a/css/styles.css
+++ b/css/styles.css
@@ -31,7 +31,7 @@ body{
   margin: 2px;
 }
 
-ul{
+ul, ol{
   font-size: 15pt;
 }
 
@@ -39,9 +39,6 @@ li{
   font-size: 12pt;
 }
 
-ol{
-  font-size: 15pt;
-}
 a:link{
   color: rgb(0, 185, 0);
 }
